# yet_another_roguelike

./: .gitignore  CMakeConfig.h.in  CMakeLists.txt  Doxyfile  LICENSE  build.sh  build_and_run.sh  get_dependences.sh
cmake/: CppServer.cmake
doc/html/: Chunk_8h_source.html  Coordinate_8h_source.html  Game_8h_source.html  InputSystem_8h_source.html  MapCell_8h_source.html  Map_8h_source.html  Position_8h_source.html  Server_8h_source.html  UserActionEvent_8h_source.html  UserActionSystem_8h_source.html  UserAction_8h_source.html  User_8h_source.html  World_8h_source.html  annotated.html  classRoguesParty_1_1AsioService-members.html  classRoguesParty_1_1AsioService.html  classRoguesParty_1_1AsioService__coll__graph.md5  classRoguesParty_1_1AsioService__inherit__graph.map  classRoguesParty_1_1AsioService__inherit__graph.md5  classRoguesParty_1_1ChatServer-members.html  classRoguesParty_1_1ChatServer.html  classRoguesParty_1_1ChatServer__coll__graph.map  classRoguesParty_1_1ChatServer__coll__graph.md5  classRoguesParty_1_1ChatServer__inherit__graph.md5  classRoguesParty_1_1ChatSession-members.html  classRoguesParty_1_1ChatSession.html  classRoguesParty_1_1ChatSession__coll__graph.md5  classRoguesParty_1_1ChatSession__inherit__graph.map  classRoguesParty_1_1ChatSession__inherit__graph.md5  classRoguesParty_1_1Chunk.html  classRoguesParty_1_1Game-members.html  classRoguesParty_1_1Game.html  classRoguesParty_1_1Game__coll__graph.md5  classRoguesParty_1_1Game__inherit__graph.map  classRoguesParty_1_1Game__inherit__graph.md5  classRoguesParty_1_1Map.html  classRoguesParty_1_1MapCell.html  classRoguesParty_1_1Server.html  classRoguesParty_1_1UserActionSystem-members.html  classRoguesParty_1_1UserActionSystem.html  (+63 more)
doc/html/search/: all_0.js  all_3.js  all_6.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  functions_0.js  searchdata.js  typedefs_0.js
src/: main.cpp
src/component/: Damageable.h  Health.h  Object.h  Position.h  Size.h  StatusEffects.h  User.h
src/core/: Action.cpp  Action.h  BaseMap.cpp  BaseMap.h  Chunk.cpp  Chunk.h  ChunkData.fbs  ChunkData_generated.h  Coordinate.h  Direction.h  Game.cpp  Game.h  ID.h  IO.cpp  IO.h  Log.cpp  Log.h  Map.h  MapCell.cpp  MapCell.h  RawData.h  RealtimeGame.cpp  RealtimeGame.h  Server.cpp  Server.h  ServerCommand.h  Tile.cpp  Tile.fbs  Tile.h  TileType.h  Tile_generated.h  TurnbasedGame.cpp  TurnbasedGame.h  Unit.h  User.h  UserAction.h  World.h  WorldMap.cpp  WorldMap.h
src/event/: DamageEvent.h  MapChangeEvent.h  MoveEvent.h  UserActionEvent.h
src/system/: DamageSystem.cpp  DamageSystem.h  MapChangeSystem.h  UserActionSystem.h
src/ui/: package-lock.json  package.json
src/ui/src/: GameField.jsx  Keymap.js  Tile.css  Tile.jsx  TileType.js
